Implement production-grade improvements including queue system, error handling, PDF generation, and validation

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,32 @@
 # Server Configuration
-PORT=3000
 NODE_ENV=development
+PORT=3000
 
-# Database Configuration
-DATABASE_URL=postgres://username:password@localhost:5432/database
+# Database
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/resume_customizer
 
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_key
+# JWT
+JWT_SECRET=your-secret-key
 JWT_EXPIRES_IN=7d
 
-# AWS S3 Configuration
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# AWS S3
+AWS_BUCKET_NAME=resume-customizer-bucket
 AWS_REGION=us-east-1
-AWS_S3_BUCKET=your-resume-bucket
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
 
-# N8N Configuration
-N8N_WEBHOOK_URL=http://localhost:5678/webhook/
-N8N_API_KEY=your_n8n_api_key
+# N8N
+N8N_WEBHOOK_URL=http://localhost:5678/webhook
+N8N_WEBHOOK_PATH=customize-resume-ai
+
+# Redis (for Bull queue)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Public URL
+PUBLIC_URL=http://localhost:3000
+
+# Customization defaults
+CUSTOMIZATION_TIMEOUT_MS=120000
+CUSTOMIZATION_MAX_RETRIES=3
