--- a/package.json
+++ b/package.json
@@ -15,18 +15,25 @@
   "dependencies": {
     "aws-sdk": "^2.980.0",
     "axios": "^0.24.0",
+    "axios-retry": "^4.5.0",
     "bcrypt": "^5.0.1",
+    "bull": "^4.16.5",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "dotenv-safe": "^9.1.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.5.0",
+    "express-validator": "^7.2.1",
     "helmet": "^4.6.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^8.5.1",
+    "marked": "^9.1.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "pg": "^8.7.1",
     "prom-client": "^14.0.1",
+    "puppeteer": "^24.4.0",
     "sequelize": "^6.6.5",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
