--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_REGION=${AWS_REGION:-us-east-1}
-      - AWS_BUCKET_NAME=${AWS_S3_BUCKET}
+      - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
       - N8N_WEBHOOK_URL=http://n8n:5678/webhook
       - N8N_WEBHOOK_PATH=customize-resume-ai
       - REDIS_HOST=redis
