Refactor: Implement service factory pattern and fix PDF resume parsing bug

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ temp/-e
 # Test files
 sample-resume.pdf
 test-resume.txt
+test-resume.md
+aniket-resume.pdf
+aniket-resume.txt
+customized-resume.txt
+job-description.txt
+test.js
+test-customize.js
