--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ PUBLIC_URL=http://localhost:3000
 # Customization defaults
 CUSTOMIZATION_TIMEOUT_MS=120000
 CUSTOMIZATION_MAX_RETRIES=3
+
+# Service configuration
+MOCK_SERVICES=false
+FALLBACK_TO_MOCK=false
