--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "marked": "^9.1.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.7.1",
     "prom-client": "^14.0.1",
     "puppeteer": "^24.4.0",
