Implement DI container, setup Jest testing framework, and create testing strategy

--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "dev": "nodemon src/app.js",
     "dev:mock": "MOCK_SERVICES=true nodemon src/app.js",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --testMatch='**/tests/unit/**/*.test.js'",
+    "test:integration": "jest --testMatch='**/tests/integration/**/*.test.js'",
+    "test:e2e": "jest --testMatch='**/tests/e2e/**/*.test.js'",
+    "test:ci": "jest --ci --runInBand --coverage",
     "lint": "eslint .",
     "db:migrate": "sequelize db:migrate",
     "db:seed": "sequelize db:seed:all",
     "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all"
   },
   "dependencies": {
+    "awilix": "^12.0.5",
     "aws-sdk": "^2.980.0",
     "axios": "^0.24.0",
     "axios-retry": "^4.5.0",
@@ -44,9 +51,9 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "jest": "^27.2.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.12",
     "sequelize-cli": "^6.2.0",
-    "supertest": "^6.1.6"
+    "supertest": "^6.3.4"
   }
 }
