--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,30 +1,79 @@
 version: '3.8'
 
 services:
-  backend:
-    build: 
-      context: .
-      target: development
-    container_name: resume-customizer-backend-dev
-    command: npm run dev
-    volumes:
-      - ./:/usr/src/app
-      - /usr/src/app/node_modules
-    environment:
-      - NODE_ENV=development
-      - LOG_LEVEL=debug
-    ports:
-      - "9229:9229" # For debugging
-
+  # PostgreSQL database
   postgres:
-    ports:
-      - "5432:5432" # Expose on host for local dev tools
-
-  adminer:
-    image: adminer:latest
-    ports:
-      - "8080:8080"
+    image: postgres:14-alpine
+    container_name: resume-customizer-postgres
     environment:
-      - ADMINER_DEFAULT_SERVER=postgres
-    networks:
-      - resume-customizer-network
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: resume_customizer
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  # Redis for Bull queue
+  redis:
+    image: redis:alpine
+    container_name: resume-customizer-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    command: redis-server --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  # MinIO (S3-compatible storage)
+  minio:
+    image: minio/minio
+    container_name: resume-customizer-minio
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio-data:/data
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  # Mock N8N API (Simplified API to simulate n8n webhook)
+  mock-n8n:
+    image: node:alpine
+    container_name: resume-customizer-mock-n8n
+    working_dir: /app
+    volumes:
+      - ./dev/mock-n8n:/app
+    ports:
+      - "5678:5678"
+    command: >
+      sh -c "npm install express cors &&
+             node server.js"
+    environment:
+      PORT: 5678
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:5678/health"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres-data:
+  redis-data:
+  minio-data:
