--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pg": "^8.7.1",
     "prom-client": "^14.0.1",
     "puppeteer": "^24.4.0",
+    "redis": "^4.7.0",
     "sequelize": "^6.6.5",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
