Implement project improvements: Add .nvmrc, update packages, add security scanning to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Run linting
       run: npm run lint
     
+    - name: Security audit
+      run: npm audit --audit-level=high
+    
     - name: Run tests
       run: npm run test:ci
       env:
