--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,8 +34,18 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
+    - name: Run linting
+      run: npm run lint
+      
     - name: Run tests
       run: npm run test:ci
+      
+    - name: Run linting
+      run: |
+        # Ensure we use ESLint v8 to match .eslintrc.js config
+        npm uninstall eslint
+        npm install --no-save eslint@8.57.0
+        npm run lint
       
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
