--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "nodemon": "^3.1.9",
     "sequelize-cli": "^6.2.0",
     "serverless": "^3.38.0",
-    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-dynamodb-local": "0.1.1",
     "serverless-offline": "^13.3.3",
     "serverless-plugin-warmup": "^8.2.1",
     "supertest": "^6.3.4"
