Implement Docker best practices and fix database setup

--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,64 @@
+# Resume Customizer Environment Variables
+# Copy this file to .env.dev for development or .env.prod for production
+
+#-----------------------------------------------
 # Server Configuration
-NODE_ENV=development
+#-----------------------------------------------
+NODE_ENV=development  # development, production
 PORT=3000
-
-# Database
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/resume_customizer
-
-# JWT
-JWT_SECRET=your-secret-key
-JWT_EXPIRES_IN=7d
-
-# AWS S3
-AWS_BUCKET_NAME=resume-customizer-bucket
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your-access-key
-AWS_SECRET_ACCESS_KEY=your-secret-key
-
-# N8N
-N8N_WEBHOOK_URL=http://localhost:5678/webhook
-N8N_WEBHOOK_PATH=customize-resume-ai
-
-# Redis (for Bull queue)
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-
-# Public URL
 PUBLIC_URL=http://localhost:3000
 
-# Customization defaults
-CUSTOMIZATION_TIMEOUT_MS=120000
-CUSTOMIZATION_MAX_RETRIES=3
+#-----------------------------------------------
+# Database Configuration
+#-----------------------------------------------
+# For development, format: postgres://user:password@host:port/database
+DATABASE_URL=postgres://postgres:postgres@postgres:5432/resume_customizer
 
-# Service configuration
-MOCK_SERVICES=false
-FALLBACK_TO_MOCK=false
+# For production, these are used separately
+DB_HOST=postgres
+DB_PORT=5432
+DB_NAME=resume_customizer
+DB_USER=postgres
+DB_PASSWORD=securepassword
+
+#-----------------------------------------------
+# Authentication
+#-----------------------------------------------
+JWT_SECRET=your-secret-key-here  # Change this to a secure value!
+JWT_EXPIRES_IN=7d
+
+#-----------------------------------------------
+# AWS/MinIO Configuration
+#-----------------------------------------------
+AWS_BUCKET_NAME=resume-customizer-bucket
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
+
+# For MinIO (development only)
+AWS_ENDPOINT=http://minio:9000
+AWS_FORCE_PATH_STYLE=true
+
+#-----------------------------------------------
+# N8N Integration
+#-----------------------------------------------
+N8N_WEBHOOK_URL=http://n8n:5678/webhook
+N8N_WEBHOOK_PATH=customize-resume-ai
+
+#-----------------------------------------------
+# Redis Configuration
+#-----------------------------------------------
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=  # Empty for development, set for production
+
+#-----------------------------------------------
+# Application Settings
+#-----------------------------------------------
+CUSTOMIZATION_TIMEOUT_MS=30000
+CUSTOMIZATION_MAX_RETRIES=2
+
+#-----------------------------------------------
+# Logging
+#-----------------------------------------------
+LOG_LEVEL=info  # debug, info, warn, error
