--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "db:migrate": "sequelize db:migrate",
     "db:seed": "sequelize db:seed:all",
     "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
-    "docker:up": "docker-compose -f docker-compose.dev.yml up -d",
-    "docker:down": "docker-compose -f docker-compose.dev.yml down",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up",
+    "docker:dev:build": "docker-compose -f docker-compose.dev.yml up --build",
+    "docker:dev:down": "docker-compose -f docker-compose.dev.yml down",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up -d",
+    "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
+    "docker:clean": "docker system prune -f",
     "deploy": "serverless deploy",
     "deploy:dev": "serverless deploy --stage dev",
     "deploy:staging": "serverless deploy --stage staging",
@@ -27,6 +31,8 @@
     "remove": "serverless remove"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.8.0",
+    "@smithery/sdk": "^1.0.3",
     "awilix": "^12.0.5",
     "aws-sdk": "^2.980.0",
     "axios": "^1.8.4",
