--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -97,10 +97,9 @@ services:
   minio:
     image: minio/minio:RELEASE.2023-09-07T02-05-02Z
     container_name: resume-customizer-minio
-    env_file: .env.dev
     environment:
-      MINIO_ROOT_USER: ${AWS_ACCESS_KEY_ID:-minioadmin}
-      MINIO_ROOT_PASSWORD: ${AWS_SECRET_ACCESS_KEY:-minioadmin}
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
     ports:
       - "9000:9000"
       - "9001:9001"
