Add swappable AI service implementation with feature flag support
- Create AI service interface for standardized contract
- Implement N8N webhook-based AI service
- Implement Direct LLM-based AI service
- Add factory pattern for creating appropriate implementation
- Update service registry to use factory pattern
- Add configuration with feature flag support
- Add unit tests for AI service factory
- Update documentation

--- a/.env.example
+++ b/.env.example
@@ -28,10 +28,13 @@ JWT_SECRET=your-secret-key-here  # Change this to a secure value!
 JWT_EXPIRES_IN=7d
 
 #-----------------------------------------------
-# AWS/MinIO Configuration
+# Storage Configuration
 #-----------------------------------------------
-AWS_BUCKET_NAME=resume-customizer-bucket
-AWS_REGION=us-east-1
+STORAGE_TYPE=s3  # s3, local
+
+# S3/MinIO Configuration
+S3_BUCKET=resume-customizer-bucket
+S3_REGION=us-east-1
 AWS_ACCESS_KEY_ID=minioadmin
 AWS_SECRET_ACCESS_KEY=minioadmin
 
@@ -39,11 +42,34 @@ AWS_SECRET_ACCESS_KEY=minioadmin
 AWS_ENDPOINT=http://minio:9000
 AWS_FORCE_PATH_STYLE=true
 
+# Local storage (alternative to S3)
+LOCAL_STORAGE_PATH=./uploads
+
 #-----------------------------------------------
-# N8N Integration
+# AI Service Implementation
 #-----------------------------------------------
-N8N_WEBHOOK_URL=http://n8n:5678/webhook
-N8N_WEBHOOK_PATH=customize-resume-ai
+# Options: 'n8n', 'direct_llm'
+AI_SERVICE_IMPLEMENTATION=n8n
+
+#-----------------------------------------------
+# N8N Integration (used when AI_SERVICE_IMPLEMENTATION=n8n)
+#-----------------------------------------------
+N8N_WEBHOOK_URL=http://n8n:5678
+N8N_WEBHOOK_PATH=/webhook/customize-resume-ai
+N8N_TIMEOUT_MS=120000
+N8N_MAX_RETRIES=3
+
+#-----------------------------------------------
+# Direct LLM Integration (used when AI_SERVICE_IMPLEMENTATION=direct_llm)
+#-----------------------------------------------
+# LLM API Key (required for direct_llm implementation)
+LLM_API_KEY=your-api-key-here
+# Options: https://openrouter.ai/api, https://api.openai.com, etc.
+LLM_API_BASE_URL=https://openrouter.ai/api
+# Model name to use for LLM API
+LLM_MODEL_NAME=deepseek/deepseek-r1-distill-llama-70b
+# Timeout in milliseconds
+LLM_TIMEOUT_MS=120000
 
 #-----------------------------------------------
 # Redis Configuration
@@ -53,12 +79,19 @@ REDIS_PORT=6379
 REDIS_PASSWORD=  # Empty for development, set for production
 
 #-----------------------------------------------
-# Application Settings
-#-----------------------------------------------
-CUSTOMIZATION_TIMEOUT_MS=30000
-CUSTOMIZATION_MAX_RETRIES=2
-
-#-----------------------------------------------
 # Logging
 #-----------------------------------------------
 LOG_LEVEL=info  # debug, info, warn, error
+
+#-----------------------------------------------
+# Rate Limiting
+#-----------------------------------------------
+RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
+RATE_LIMIT_MAX=100  # 100 requests per windowMs
+
+#-----------------------------------------------
+# CORS Configuration
+#-----------------------------------------------
+CORS_ORIGIN=*  # Use specific domains in production
+CORS_METHODS=GET,HEAD,PUT,PATCH,POST,DELETE
+CORS_CREDENTIALS=false
